--- a/lesson6/task1/src/index.css
+++ b/lesson6/task1/src/index.css
@@ -11,7 +11,7 @@ body {
   height: 100vh;
   justify-content: center;
   align-items: center;
-  background: url("./img/background.jpg");
+  /* background: url("./img/background.jpg"); */
 
-  /* background: url("https://gromcode.s3.eu-central-1.amazonaws.com/front-end/tools/lesson6/task1/background.jpg"); */
+  background: url("https://gromcode.s3.eu-central-1.amazonaws.com/front-end/tools/lesson6/task1/background.jpg");
 }
